# synacor_challenge

./: CMakeLists.txt  LICENSE  README.md  arch-spec  build.py  test_numbers.py
src/: virtual_machine.c
